--- a/techspecs.html
+++ b/techspecs.html
@@ -369,7 +369,7 @@
     
   <div class="row">
   	<div class="three columns centered">
-    	<a href="../podcasts.html" class="radius button right">Hear Some Insights</a>
+    	<a href="../seanversations.html" class="radius button right">Hear Some Insights</a>
     </div>
   </div>
   </br>
