--- a/seanversations.html
+++ b/seanversations.html
@@ -160,6 +160,26 @@
   
   <div class="row">
     <div class="two columns">
+        <h4>20</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>Left Brain, Right Brain:  Segment 2</h5>
+	    <p>In this special episode 20, we revisit the very first segment that gave this show it's name:  Left Brain, Right Brain. With my co-host <a href="http://tragnark.com">Tragnark</a>, we talking about an insanely broad array of topics that end right where it started. And it all (ahem) starts with a better way for artists to work with engineers. Listen in for a few secrets we uncovered during our chat.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/20.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/20.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed March 26</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/20.m4a" title="Download Audio">Download (30 mins)</a></p>
+    </div>
+  </div> 
+
+  <br/>
+  <br/>
+  
+  <div class="row">
+    <div class="two columns">
         <h4>19</h4>
     </div>
     <div class="seven columns">
