--- a/decipher.html
+++ b/decipher.html
@@ -9,7 +9,7 @@
 
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
-  <meta name="apple-itunes-app" content="app-id=456870760">
+  <meta name="apple-itunes-app" content="app-id=629564779">
 
   <title>Sean M Everett | Decipher The Map, Become A Hero</title>
 
@@ -71,9 +71,8 @@
             <li><a href="../seanversations.html">Seanversations</a></li>
             <li><label>Social</label></li>
             <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
-            <li><a href="http://seanmeverett.tumblr.com">Blog</a></li>
+            <li><a href="http://seanmeverett.Quora.com">Blog</a></li>
             <li><a href="http://dribbble.com/seanmeverett">Dribbble</a></li>
-            <li><a href="http://www.quora.com/Sean-Everett">Quora</a></li>
           </ul>
         <li class="divider"></li>
       </ul>
