--- a/journey.html
+++ b/journey.html
@@ -6,7 +6,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8" />
-  <meta name="apple-itunes-app" content="app-id=456870760">
+  <meta name="apple-itunes-app" content="app-id=629564779">
 
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
@@ -71,9 +71,8 @@
             <li><a href="../seanversations.html">Seanversations</a></li>
             <li><label>Social</label></li>
             <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
-            <li><a href="http://seanmeverett.tumblr.com">Blog</a></li>
+            <li><a href="http://seanmeverett.quora.com">Blog</a></li>
             <li><a href="http://dribbble.com/seanmeverett">Dribbble</a></li>
-            <li><a href="http://www.quora.com/Sean-Everett">Quora</a></li>
           </ul>
         <li class="divider"></li>
       </ul>
@@ -104,7 +103,7 @@
     <div class="ten columns">
       <div class="panel radius">
         <h5>1. Sioux City</h5>
-        <p>I'm often confused for Clark Kent, what with my black glasses, white tees and being raised in Iowa. Sadly, my super powers only extend as far as I can throw a baseball. My first love, I spent some of my favorite summers fielding ground balls at the hot corner, playing Mario Kart with my team, and competing in state tournaments.</p>
+        <p>I'm often confused for Clark Kent, what with my black glasses, white tees and being raised in Iowa. Sadly, my super powers only extend as far as I can throw a baseball. As my first love, I spent some of my favorite summers fielding ground balls at the hot corner, playing Mario Kart with my team, and competing in state tournaments.</p>
       </div>
     </div>
     <div class="two columns">
@@ -123,7 +122,7 @@
     <div class="six columns">
       <div class="panel radius">
         <h5>2. Iowa City</h5>
-        <p>No, I didn't grow up on a farm. But the University of Iowa beckoned. As it was one of the best Actuarial Science programs in the nation and in my backyard, once I realized Mathematics was in my future, it was an easy decision.</p>
+        <p>No, I didn't grow up on a farm. But the University in my backyard, Iowa, beckoned. And because it was one of the best Actuarial Science programs in the nation, once I realized Mathematics was in my future, it was an easy decision to pack up and make the move.</p>
       </div>
     </div>
     <div class="three columns">
@@ -136,7 +135,7 @@
     <div class="three columns">
       <div class="panel radius">
         <h5>3. Chicago</h5>
-        <p>One of a few students to get back-to-back paid internships with PwC's startup spin-off, Unifi.</p>
+        <p>One of a few students to get back-to-back paid internships with PwC's Chicago startup spin-off, Unifi.</p>
       </div>
     </div>
 
@@ -201,7 +200,7 @@
     <div class="six columns">
       <div class="panel radius">
         <h5>6. New York City</h5>
-        <p>I moved for love, but it didn't work out. I joined a startup, but it didn't work out. So I changed my life, focused on the work and the people I loved and something new, and better, was born. The moment I stopped compromising on quality in both these relationships, is the moment I became. I wish this for you.</p>
+        <p>I moved for love, but it didn't work out. So I joined a startup and a new family emerged. I changed my life, focused on the work and the people I loved and something new, and better, was born. The moment I stopped compromising on quality in both these relationships, is the moment I became the man my parents raised me to be.</p>
       </div>
     </div>
     <div class="three columns">
@@ -214,7 +213,7 @@
     <div class="three columns">
       <div class="panel radius text-center">
         <p>
-          <img src="images/adam.jpg" />
+          <img src="images/storyapp.jpg" />
         </p>
       </div>
     </div>
