--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8" />
-  <meta name="apple-itunes-app" content="app-id=456870760">
+  <meta name="apple-itunes-app" content="app-id=629564779">
 
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
@@ -71,9 +71,8 @@
             <li><a href="../seanversations.html">Seanversations</a></li>
             <li><label>Social</label></li>
             <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
-            <li><a href="http://seanmeverett.tumblr.com">Blog</a></li>
+            <li><a href="http://seanmeverett.quora.com">Blog</a></li>
             <li><a href="http://dribbble.com/seanmeverett">Dribbble</a></li>
-            <li><a href="http://www.quora.com/Sean-Everett">Quora</a></li>
           </ul>
         <li class="divider"></li>
       </ul>
@@ -109,8 +108,8 @@
         </div>
         <div class="two columns">
         	<a href="http://twitter.com/SeanMEverett">@SeanMEverett</a></br>
-        	<a href="http://seanmeverett.tumblr.com">seanmeverett.tumblr.com</a></br>
-        	<a href="mailto:seanmeverett@gmail.com">seanmeverett@gmail.com</a>
+        	<a href="http://seanmeverett.quora.com">seanmeverett.quora.com</a></br>
+        	<a href="mailto:sean@adamandluna.com">sean@adamandluna.com</a>
         </div>
         <div class="two columns">
         </div>
@@ -179,13 +178,40 @@
         <h4>Experience</h4>
     </div>
     <div class="eight columns">
-        <h4><a href="http://seanmeverett.com">^</a></h4>
-        <h5>Storyteller</h5>
-        <p>Tell stories. Open doors. Become.</p>
-
+        <h4><a href="http://superkindgroup.com">SuperKind.</a></h4>
+        <h5>Founder & Managing Principle</h5>
+        <p>A private equity group that scales traditionally unscalable businesses by adding technology, entertainment and marketing partnerships to portfolio companies.</p>
+        <li>Created deal flow, established relationships with founders, and prepared prospectuses</li>
+        <li>Created a private equity purchase buyout opportunity of a multi-location, boutique gym chain in the Dallas metroplex</li>
+        <li>Analyzed 37 historical financial statements and prepared a 70-page private equity purchase prospectus outlining the business valuation, purchase price, marketing strategy, incentive compensation plan, and external fitness and medical partnerships to supercharge revenue</li>
+        <li>Established SuperKind as the exclusive American marketing and distribution partner for Anil Arjandas luxury spanish jewelry line (anilarjandas.com), including negotiating celebrity endorsement by Lilly Ghalichi of Bravo's The Shahs of Sunset fame</li>
     </div>
     <div class="two columns">
-        <h5>2012 - 2071</h5>
+        <h5>2013 - present</h5>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="two columns">
+    </div>
+    <div class="eight columns">
+        <h4><a href="https://www.adamandluna.com">Adam & Luna</a></h4>
+        <h5>Founder & Product Engineer</h5>
+        <li>Launched StoryApp from pre idea to app store without any angel or venture capital and with an entirely remote team</li>
+        <li>Recruited a world class team:  Ice Age story artist, Disney concept artist, Badgeville engineer, and US Air Force Cyber Security engineer</li>
+        <li>Partnered with Carnegie Mellon Robotics Lab Senior Fellow, and as one of 10 global companies partnered with Beyond Verbal, an Israeli intelligent emotion analysis company</li>
+        <li>Sold nearly $100,000 in design and engineering agency work to fund team’s compensation</li>
+        <li>Developed HR cultural and performance management document, managed all accounting and legal contracts, controlled business expenses under $200 per month</li>
+        <li>Functioned as acting CTO building product roadmap, specs, daily standups, scrum and weekly sprints, all while training a Product Apprentice</li>
+        <li>Engineered 7 major versions of website, including Ruby on Rails app to collect user signups complete with transactional emails</li>
+        <li>Engineered StoryApp’s first character animations in Objective-C; our product is currently running on AWS Elastic Beanstalk, Rails, Mongo, Redis, and Qbox for elastic search</li>
+        <li>Designed all product mechanics, the user experience, and wireframes of the user interface</li>
+        <li>Led the company’s marketing through daily blog posts, social media, individual emails, HTML email campaigns, and direct mail</li>
+        <li>Compiled, analyzed, and shared daily Mixpanel analytics and implications with entire team</li>
+        <li>Managed media relations across multiple publications including Pando Daily</li>
+    </div>
+    <div class="two columns">
+        <h5>2012 - present</h5>
     </div>
   </div>
   
