--- a/seanversations.html
+++ b/seanversations.html
@@ -6,7 +6,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8" />
-  <meta name="apple-itunes-app" content="app-id=456870760">
+  <meta name="apple-itunes-app" content="app-id=629564779">
 
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
@@ -71,9 +71,8 @@
             <li><a href="../seanversations.html">Seanversations</a></li>
             <li><label>Social</label></li>
             <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
-            <li><a href="http://seanmeverett.tumblr.com">Blog</a></li>
+            <li><a href="http://seanmeverett.quora.com">Blog</a></li>
             <li><a href="http://dribbble.com/seanmeverett">Dribbble</a></li>
-            <li><a href="http://www.quora.com/Sean-Everett">Quora</a></li>
           </ul>
         <li class="divider"></li>
       </ul>
@@ -150,10 +149,209 @@
 	  	<ul class="checklist">
 		  	<h5>Subscribe</h5>
 		  	<li><span><a href="https://itunes.apple.com/us/podcast/seanversations/id580820521">iTunes</a></span></li>
-		  	<li><span><a href="http://seanversations.podbean.com/feed/">RSS</a></span></li>
 		</ul>
     </div>
   </div>
+  
+  <br/>
+  <br/>
+  
+  <div class="row">
+    <div class="two columns">
+        <h4>31</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>Artist, Actuary & Gamer Discuss iOS 7's Implications on StoryApp</h5>
+	    <p>Today in this special seanversation we go straight ménage à trois with 3 members of the Adam & Luna family (launching later this week). <a href="http://tragnark.com">Tragnark</a>, <a href="http://twitter.com/chinfonc">Chin</a>, and <a href="http://seanmeverett.com">I</a> discuss Apple's iOS 7 redesign and what it means for not just StoryApp (coming this summer), which we've been building for the last year, but also the implications for technology, animation, and creating life in worlds, both virtual and real. We get a little fired up because this is our life's work so excuse some of the intensity. Smiley face!</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/31.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/31.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed June 12</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/31.m4a" title="Download Audio">Download (47 mins)</a></p>
+    </div>
+  </div> 
+  
+  <br/>
+  <br/>
+  
+  <div class="row">
+    <div class="two columns">
+        <h4>30</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>A Yogi Who Found What She Was Searching For in NYC</h5>
+	    <p>Today my special guest is <a href="https://www.facebook.com/meghan.kaushal">Meghan Kaushal</a>, a medical device Sales Rep at St Judes Medical in New York City. Today we talk about the best and worst parts about Yoga, relationships, and the horrid "selfie" trend sweeping your social networks.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/30.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/30.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed June 5</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/30.m4a" title="Download Audio">Download (30 mins)</a></p>
+    </div>
+  </div> 
+  
+  <br/>
+  <br/>
+  
+  <div class="row">
+    <div class="two columns">
+        <h4>29</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>Humanity's Biggest Emotional Pain</h5>
+	    <p>In this special episode, I talk about the one thing that all of us humans share, the biggest problem we all face, and how we won't survive unless we have it in our life. This is a short episode, in honor of Memorial Day.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/29.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/29.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed May 29</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/29.m4a" title="Download Audio">Download (11 mins)</a></p>
+    </div>
+  </div> 
+  
+  <br/>
+  <br/>
+
+  <div class="row">
+    <div class="two columns">
+        <h4>28</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>iOS Engineer Who Built Twitter #Music App, Part 2</h5>
+	    <p>Today my special guest is <a href="https://twitter.com/followben">Ben Stovold</a>, who comes to us all the way from Gold Coast, Australia. In Part 2, we chat about the differences between building the Twitter #Music app and building an app for field engineers working in the field, using Quartz Composer to prototype iPhone app animations, Facebook Home, and the difference between UI design, polish design, and animation design.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/28.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/28.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed May 22</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/28.m4a" title="Download Audio">Download (36 mins)</a></p>
+    </div>
+  </div> 
+  
+  <br/>
+  <br/>
+
+  <div class="row">
+    <div class="two columns">
+        <h4>27</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>iOS Engineer Who Understands Design & Animation, Part 1</h5>
+	    <p>Today my special guest is <a href="https://twitter.com/followben">Ben Stovold</a>, who comes to us all the way from Gold Coast, Australia. In Part 1, we chat about family, how the process of a Seanversation works (not even I can answer that), and what it takes to bring the subtlest details of consumer apps to life.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/27.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/27.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed May 15</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/27.m4a" title="Download Audio">Download (29 mins)</a></p>
+    </div>
+  </div> 
+
+  <br/>
+  <br/>
+
+  <div class="row">
+    <div class="two columns">
+        <h4>26</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>A Mother's Take on Apps & Healthcare</h5>
+	    <p>In part 2 of my road trip seanversation with my mom, we almost crash the car while we record this episode.  We chat about the quality in healthcare and what the future holds as technology begins to creep into hospitals.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/26.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/26.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed May 8</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/26.m4a" title="Download Audio">Download (19 mins)</a></p>
+    </div>
+  </div> 
+  
+  <br/>
+  <br/>
+
+  <div class="row">
+    <div class="two columns">
+        <h4>25</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>My Mom's Advice to Her 30-Year Old Self</h5>
+	    <p>In honor of May Day, today's Seanversation is with my mom during a road trip back from Austin. In part 1 of our chat, some weird memories of my youth come up while driving through the destruction in West Texas. I find out a bit more about my mom's life, how it shaped my own, and her advice to how the rest of us should live our own.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/25.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/25.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed May 1</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/25.m4a" title="Download Audio">Download (21 mins)</a></p>
+    </div>
+  </div> 
+  
+  <br/>
+  <br/>
+
+  <div class="row">
+    <div class="two columns">
+        <h4>24</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>What To Do When A Client Doesn't Pay You</h5>
+	    <p>I'm taking a break from the normal Seanversations in this episode and instead of talking to one other person, I'm going to talk to you. And about something that I've been dealing with for the last 6 months. Namely, what to do when a client doesn't pay you for work you've delivered. I give away a few secret nuggets, based on my own failings, experience, and from Loan Workout friends in the banking industry. Hopefully this helps you in the future!</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/24.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/24.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed April 24</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/24.m4a" title="Download Audio">Download (19 mins)</a></p>
+    </div>
+  </div> 
+  
+  <br/>
+  <br/>
+
+  <div class="row">
+    <div class="two columns">
+        <h4>23</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>Ice Age Story Artist Reveals the Story He's Always Wanted To Tell</h5>
+	    <p>Today my special guest is <a href="http://www.imdb.com/name/nm1569797/">Jerod Chirico</a>, a Storyboard Artist at Blue Sky studios, who has developed stories for Scrat in Ice Age, Horton Hears a Who, the upcoming animated movie Epic, and a few more secretly in development. We chat about the story he's always wanted to tell, the intersection of theoretical physics and storytelling, and why Indiana Jones always seems to creep into our seanversations.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/23.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/23.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed April 16</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/23.m4a" title="Download Audio">Download (21 mins)</a></p>
+    </div>
+  </div> 
+  
+  <br/>
+  <br/>
+  
+  <div class="row">
+    <div class="two columns">
+        <h4>22</h4>
+    </div>
+    <div class="seven columns">
+    	<h5>Hardcore Parkour</h5>
+	    <p>Today my special guest is <a href="http://www.luisarmando.mx">Luis Mercado</a>, an engineer at Amazon and a member of the global startup weekend team. Today we talk about the weird things in life that affect our health, from the weather to exercise to not spending 18 hour a day in front of a computer. We also give away the secret level 3 move that will help you master Parkour.</p>
+	    <audio controls="controls" preload="none" src="https://s3.amazonaws.com/seanversations/22.m4a">
+	  		<source src="https://s3.amazonaws.com/seanversations/22.m4a" type="audio/mp3" />
+	    </audio>
+    </div>
+    <div class="three columns">
+        <h5>Wed April 10</h5>
+        <p><a class="mono" href="https://s3.amazonaws.com/seanversations/22.m4a" title="Download Audio">Download (15 mins)</a></p>
+    </div>
+  </div> 
   
   <br/>
   <br/>
