--- a/techspecs.html
+++ b/techspecs.html
@@ -6,7 +6,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8" />
-  <meta name="apple-itunes-app" content="app-id=456870760">
+  <meta name="apple-itunes-app" content="app-id=629564779">
 
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
@@ -71,9 +71,8 @@
             <li><a href="../seanversations.html">Seanversations</a></li>
             <li><label>Social</label></li>
             <li><a href="http://twitter.com/seanmeverett">Twitter</a></li>
-            <li><a href="http://seanmeverett.tumblr.com">Blog</a></li>
+            <li><a href="http://seanmeverett.quora.com">Blog</a></li>
             <li><a href="http://dribbble.com/seanmeverett">Dribbble</a></li>
-            <li><a href="http://www.quora.com/Sean-Everett">Quora</a></li>
           </ul>
         <li class="divider"></li>
       </ul>
@@ -138,9 +137,9 @@
     </div>
     <div class="three columns">
        	  <ul class="disc">
-       		<li>Experience:  15 years</li>
-       		<li>Education:  25 years</li>
-	       	<li>Wisdom:  31 years</li>
+       		<li>Experience:  16 years</li>
+       		<li>Education:  26 years</li>
+	       	<li>Wisdom:  32 years</li>
 	       	<li>Food:  5 lb Hamburgers</li>
        		</li>
        	  </ul>
@@ -234,7 +233,6 @@
        	  <ul class="disc">
        		<li>Short-term:  Photographic</li>
        		<li>Long-term:  Focused</li>
-       		<li>Ideas:  Daily</li>
        	  </ul>
     </div>
     <div class="twelve columns">
