initial design and content layout

--- a/index.html
+++ b/index.html
@@ -24,60 +24,98 @@
 
   <body>
     <div class="background">
+     <!-- STATUS BAR
+      ================================================== -->
+      <div class="status-bar">
+        <div class="row">
+          <div class="col-xs-4 text-left">
+            <p class="small">AT&T</p>
+          </div>
+          <div class="col-xs-4 text-center">
+            <p>Book of <span class="heavy">Sean.</span></p>
+          </div>
+          <div class="col-xs-4 text-right">
+            <p class="small">100%</p>
+          </div>
+        </div>
+      </div>
+
 
       <div class="container">
 
 
         <!-- BODY
         ================================================== -->
-        <div class="text-center">
-          <h1>Book of Sean.</h1>
-        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="text-center">
+              <img class="center img-circle" src="img/seanmeverett.jpg">
+            </div>  <!-- center -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
 
-        <div class="panel-group" id="accordion">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                  Collapsible Group Item #1
-                </a>
-              </h4>
-            </div>
-            <div id="collapseOne" class="panel-collapse collapse">
-              <div class="panel-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heavy">2014</h2>
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2014-1">
+                      Something <span class="heavy">NeXT</span>.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2014-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>Stay tooned.</p>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                  Collapsible Group Item #2
-                </a>
-              </h4>
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse">
-              <div class="panel-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              </div>
-            </div>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                  Collapsible Group Item #3
-                </a>
-              </h4>
-            </div>
-            <div id="collapseThree" class="panel-collapse collapse">
-              <div class="panel-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              </div>
-            </div>
-          </div>
-        </div>
+            </div>  <!-- panel-group -->
+
+            <br><br>
+
+            <h2 class="heavy">2013</h2>
+            <div class="panel-group" id="accordion">
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2013-1">
+                      Built <span class="heavy">getROI</span> for Instagram.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2013-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>Based on Gary Vaynerchuck's marketing-in-context philosophy, use the power of Instagram to find customers for your product. Search one of your product's keywords to find potential customers with the same interests and chat them up in the comments.</p>
+                    <p><a class="btn btn-primary" href="http://seanmeverett.com/getROI" role="button">Use getROI &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2013-2">
+                      Launched <span class="heavy">StoryApp</span> on iOS for free.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2013-2" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>StoryApp's robotic wooden friend, Kiiy, records your voice over multiple photos and transforms them into an epic video. Kiiy understands your spoken words and your emotion from your tone of voice, automatically hashtagging your story with each word for it to be discovered by others.</p>
+                    <p><a class="btn btn-primary" href="http://bit.ly/storyapp" role="button">Download StoryApp &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+
+            </div>  <!-- panel-group -->
+
+
+          </div>  <!-- col -->
+        </div>  <!-- row -->
 
       </div> <!-- /container -->
     </div>  <!-- background -->
@@ -90,7 +128,7 @@
         <div class="hidden-xs">
           <div class="row">
             <div class="col-xs-4">
-              <p>© Sean M Everett 2014</p>
+              <p>© Sean M Everett <a href="/">2014</a>, <a href="/2013">2013-2012</a>, 2011-1981</p>
               <p class="small text-muted">Building a machine indistinguishable from a human being.</p>
             </div>
             <div class="col-xs-4 col-xs-offset-4">
@@ -107,7 +145,7 @@
         <div class="visible-xs">
           <div class="row">
             <div class="col-xs-12">
-              <p>© Sean M Everett 2014</p>
+              <p>© Sean M Everett <a href="/">2014</a>, <a href="/2013">2013-2012</a>, 2011-1981</p>
               <ul class="list-inline">
                 <li><a href="http://twitter.com/seanmeverett">Thoughts</a></li>
                 <li><a href="http://seanmeverett.quora.com">Letters</a></li>
