fixing status bar to top

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <body>
     <div class="background">
+
      <!-- STATUS BAR
       ================================================== -->
       <div class="status-bar">
@@ -44,15 +45,17 @@
       <div class="container">
 
 
-        <!-- BODY
+        <!-- CONTENT
         ================================================== -->
-        <div class="row">
-          <div class="col-md-12">
-            <div class="text-center">
-              <img class="center img-circle" src="img/seanmeverett.jpg">
-            </div>  <!-- center -->
-          </div>  <!-- col -->
-        </div>  <!-- row -->
+        <div class="hero">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <img class="center img-circle" src="img/seanmeverett.jpg">
+              </div>  <!-- center -->
+            </div>  <!-- col -->
+          </div>  <!-- row -->
+        </div>
 
         <div class="row">
           <div class="col-md-12">
@@ -110,7 +113,6 @@
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
 
-
             </div>  <!-- panel-group -->
 
 
@@ -118,6 +120,7 @@
         </div>  <!-- row -->
 
       </div> <!-- /container -->
+      <br><br>
     </div>  <!-- background -->
 
 
